--- a/Model_1_R/settings.ini
+++ b/Model_1_R/settings.ini
@@ -1,6 +1,5 @@
 # Запуск: 
-# cat settings | grep -v '#' | sed "s/@seed/${RANDOM}/g" > settings.ini && dpdeepctl --target-file="parms.txt" --settings-file="settings.ini"
-
+# cat settings.ini | sed "s/seed=([0-9]{1,11})/seed=${RANDOM}/g" -r > settings.ini && dpdeepctl --default-name=settings.ini
 # Application Options:
 #   --default-name=Default names             File name for everything and default group names
 #   --model-file=Model file name             File name where model is described
@@ -46,21 +45,20 @@ run=gdeep;1;edeep;1;sdeep;1;dpupdate;1;substitute;5;checkstop;1;optpost;1;optpos
 run_after=optpost;optposteval;writelog;
 
 [default_target]
-debug=0
+debug=1
 mainfunc=scoredouble;0;1;1;
 
 [default_model]
-debug=0
-parts=x;10;
-nummask=10
-numdparms=10;
-numtweak=10
+debug=1
+parts=x;29;
+nummask=29
+numdparms=29;
+numtweak=29
 vallbound=-1;
 valhbound=1
-command=printscore
+convert=octave
+command=./app.r
 delimiters=\n
 keys=0;
 mapping=0;
-
-
 
