Формат файла параметров

--- a/Model_1_R/settings.ini
+++ b/Model_1_R/settings.ini
@@ -1,20 +1,9 @@
 # Запуск: 
-# cat settings.ini | sed "s/seed=([0-9]{1,11})/seed=${RANDOM}/g" -r > settings.ini && dpdeepctl --default-name=settings.ini
-# Application Options:
-#   --default-name=Default names             File name for everything and default group names
-#   --model-file=Model file name             File name where model is described
-#   --model-group=Model group name           Group name where model is described
-#   --settings-file=Settings file name       File name where settings are described
-#   --settings-group=Settings group name     Group name where settings are described
-#   --target-file=Target file name           File name where target is described
-#   --target-group=Target group name         Group name where target is described
-#   --output-file=Output file name           File name to write
-#   --operation=Operation                    What to do
-#   --monitor=Save logline                   Extract line from log
+# cat settings.ini | sed "s/seed=([0-9]{1,11})/seed=${RANDOM}/g" -r > settings && dpdeepctl --default-name=settings
 
 [default_settings]
 # Число процессоров + 1
-max_threads=3 
+max_threads=1 
 
 # Условие остановки: (можно absolute_iter=@G_MAX@)
 proportional_stop=1e-5 
@@ -37,7 +26,7 @@ gamma_init=1.0
 roundoff_error=1e-12
 
 # Брать новое для каждого запуска:
-seed=@seed
+seed=1
 run_before=initstop;optpost;optposteval;writelog;
 
 #run=gdeep;1;edeep;1;sdeep;1;dpupdate;1;duplicate;5;checkstop;1;optpost;1;optposteval;1;writelog;3;
@@ -49,6 +38,7 @@ debug=1
 mainfunc=scoredouble;0;1;1;
 
 [default_model]
+convert=octave
 debug=1
 parts=x;29;
 nummask=29
@@ -56,7 +46,6 @@ numdparms=29;
 numtweak=29
 vallbound=-1;
 valhbound=1
-convert=octave
 command=./app.r
 delimiters=\n
 keys=0;
