--- a/Model_1_R/settings.ini
+++ b/Model_1_R/settings.ini
@@ -40,7 +40,7 @@ mainfunc=scoredouble;0;1;1;
 [default_model]
 convert=octave
 debug=1
-parts=x;29;
+parts=degradation_rate;1;pro1_strength;1;pro2_strength;1;pro3_strength;1;pro4_strength;1;pro5_strength;1;pro6_strength;1;rbs1_strength;1;rbs2_strength;1;rbs3_strength;1;rbs4_strength;1;rbs5_strength;1;rbs6_strength;1;v1_Kd;1;v1_h;1;v2_Kd;1;v2_h;1;v3_Kd;1;v3_h;1;v4_Kd;1;v4_h;1;v5_Kd;1;v5_h;1;v6_Kd;1;v6_h;1;v7_Kd;1;v7_h;1;v8_Kd;1;v8_h;1;
 nummask=29
 numdparms=29;
 numtweak=29
